@@ -77,6 +77,8 @@ CHANGES IN VERSION 1.99.0
    workflow; see #107 for details) [2016-01-23 Sat]
  o use just unique peptides in master creation (see #107) [2016-01-23 Sat]
  o add `filterNonUniqueIdentMatches` (see #111 for details) [2016-02-22 Mon]
+ o Remove "light" version of `writeMergedPeptides` and `writeMachtedPeptides`
+   (now always the full `data.frame` is saved; see #95) [2016-10-16 Sun]
 
 CHANGES IN VERSION 1.13.1
 -------------------------
